--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+#card{
+	width: 300px;
+	height:450px;
+	padding: 15px;
+	margin:15px;
+	background-color: #f1f1f1;
+	box-shadow: 5px 10px 18px #e0e0e0;
+	text-align: center;
+}
+
+img{
+	width : 250px; 
+	height : 200px;
+	/* padding : 15px 25px 0px 25px; */
+}
+
+#btn{
+	background-color : #fe625a;
+	color: white;
+	padding : 10px;
+	border-radius: 10px;
+	
+}
+
+#titleId{
+	text-align: center;
+}
